[tool.poetry]
name = "datamapper"
version = "0.1.0"
description = ""
authors = ["Ray Zane <raymondzane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.13"
databases = "^0.2.6"

[tool.poetry.dev-dependencies]
aiomysql = "^0.0.20"
aiosqlite = "^0.11.0"
asyncpg = "^0.20.1"
black = "^19.10b0"
flake8 = "^3.7.9"
ipython = "^7.13.0"
isort = "^4.3.21"
mypy = "^0.761"
psycopg2-binary = "^2.8.4"
pymysql = "^0.9.2"
pytest = "^5.2"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"
pytest-watch = "^4.2.0"
sphinx = "^2.4.4"
sqlalchemy-utils = "^0.36.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
